--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paraná Colado</title>
+        <title>Paraná Tools</title>
         
         <!-- Estilização do Site -->
         <link rel="stylesheet" href="style.css">
@@ -20,8 +20,8 @@
             </div>
 
             <div>
-                <a href="#script-v1">Paraná Colado V1</a>
-                <a href="#script-v2">Paraná Colado V2</a>
+                <a href="#script-v1">Paraná Tecla V1</a>
+                <a href="#script-v2">Paraná Tecla V2</a>
             </div>
         </div>
 
