OAuth2 Discord Integrated

--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="imgs/icon.png" alt="Icone Paraná Colado">
+                <img src="imgs/icon.png" alt="Icone Paraná Tools">
                 <a href="index.html"><h2>Paraná Tools</h2></a>
             </div>
 
             <div>
                 <a id="login-btn" href="login/index.html">Login</a>
-                <div >
-
-                </div>
+                <div id="user-info" style="display: none;"></div>
             </div>
         </div>
 
         <div class="content">
             <h1>Ferramentas Disponíveis</h1>
-            <div>
-                <a href="paranacolado/index.html">Paraná Colado</a>
+            <div id="tools-div">
+                <a href="redacaorush/index.html"><img src="imgs/redacaorush" alt="Redação Rush"></a>
             </div>
 
             <div class="footer">
@@ -40,5 +38,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Java Script -->
+        <script src="scripts/checkLogin.js"></script>
     </body>
 </html>
