--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,7 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Paraná Colado">
+                <img src="../imgs/icon.png" alt="Icone Paraná Tools">
                 <a href="../index.html"><h2>Paraná Tools</h2></a>
             </div>
         </div>
