--- a/redacaorush/index.html
+++ b/redacaorush/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paraná Tools - Parana Colado</title>
+        <title>Paraná Tools - Redação Rush</title>
         
         <!-- Estilização do Site -->
         <link rel="stylesheet" href="../styles/general.css">
@@ -15,13 +15,15 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Paraná Colado">
+                <img src="../imgs/icon.png" alt="Icone Paraná Tools">
                 <a href="../index.html"><h2>Paraná Tools</h2></a>
             </div>
 
             <div>
-                <a href="#script-v1">Paraná Colado V1</a>
-                <a href="#script-v2">Paraná Colado V2</a>
+                <a href="#script-v1">Redação Rush V1</a>
+                <a href="#script-v2">Redação Rush V2</a>
+                <a id="login-btn" href="../login/index.html">Login</a>
+                <div id="user-info" style="display: none;"></div>
             </div>
         </div>
 
@@ -70,7 +72,7 @@
                     <div class="get-script-box">
                         <button class="toggle-btn">Acessar</button>
                         <a class="link-input hidden"
-                        href="javascript:fetch('https://raw.githubusercontent.com/paranacolado/paranacolado.github.io/refs/heads/main/v1.js').then(t=>t.text()).then(eval);"
+                        href="javascript:fetch('https://raw.githubusercontent.com/paranatools/paranatools.github.io/refs/heads/main/v1.js').then(t=>t.text()).then(eval);"
                         draggable="true">
                             Script Bookmarklet V1
                         </a>
@@ -104,7 +106,7 @@
                     <div>
                         <h2>Como funciona?</h2>
                         <p>
-                            O Paraná Colado não é de forma alguma um malware.
+                            O Redação Rush não é de forma alguma um malware.
                             Ele não tem a intenção de roubar seus dados.
                             Seu funcionamento é simples:
                             ele apenas simula a digitação do seu texto,
@@ -174,7 +176,7 @@
             </div>
 
             <div id="parana-tools-div">
-                <img src="imgs/icon.png" alt="Icone Paraná Colado">
+                <img src="imgs/icon.png" alt="Icone Paraná Tools">
                 <p>Paraná Tools</p>
             </div>
         </div>
