--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Paraná Tools</title>
-        
+
         <!-- Estilização do Site -->
-        <link rel="stylesheet" href="styles/general.css">
+        <link rel="stylesheet" href="../css/general.css">
     </head>
 
     <!-- Estruturação do Site -->
@@ -17,11 +17,11 @@
         <div class="nav-bar">
             <div>
                 <img src="imgs/icon.png" alt="Icone Paraná Tools">
-                <a href="index.html"><h2>Paraná Tools</h2></a>
+                <a href="#"><h2>Paraná Tools</h2></a>
             </div>
 
             <div>
-                <a id="login-btn" href="login/index.html">Login</a>
+                <a id="login-btn" href="login" style="display: none;">Login</a>
                 <div id="user-info" style="display: none;"></div>
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="content">
             <h1>Ferramentas Disponíveis</h1>
             <div id="tools-div">
-                <a href="redacaorush/index.html"><img src="imgs/redacaorush" alt="Redação Rush"></a>
+                <a href="redacaorush"><img src="imgs/redacaorush" alt="Redação Rush"></a>
             </div>
 
             <div class="footer">
