--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,7 @@
         <title>Paraná Tools</title>
         
         <!-- Estilização do Site -->
-        <link rel="stylesheet" href="../styles/general.css">
+        <link rel="stylesheet" href="../css/general.css">
     </head>
 
     <!-- Estruturação do Site -->
@@ -16,7 +16,7 @@
         <div class="nav-bar">
             <div>
                 <img src="../imgs/icon.png" alt="Icone Paraná Tools">
-                <a href="../index.html"><h2>Paraná Tools</h2></a>
+                <a href="../"><h2>Paraná Tools</h2></a>
             </div>
         </div>
 
