New Platform Name

--- a/login/index.html
+++ b/login/index.html
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Paraná Tools">
-                <a href="../"><h2>Paraná Tools</h2></a>
+                <img src="../imgs/icon.png" alt="Icone Pryzen Lab">
+                <a href="../"><h2>Pryzen Lab</h2></a>
             </div>
         </div>
 
@@ -25,10 +25,10 @@
             <!-- Login Tab -->
             <div class="login-tab">
                 <h4>Login</h4>
-                <h1>Conecte-se ao Paraná Tools!</h1>
+                <h1>Conecte-se ao Pryzen Lab!</h1>
                 <p>
                     Ao conectar-se com o discord permite que você
-                    utilize scripts avançados do Paraná Tools.
+                    utilize scripts avançados do Pryzen Lab.
                 </p>
 
                 <button id="login-discord">
