--- a/redacaorush/index.html
+++ b/redacaorush/index.html
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Paraná Tools">
-                <a href="../"><h2>Paraná Tools</h2></a>
+                <img src="../imgs/icon.png" alt="Icone Pryzen Lab">
+                <a href="../"><h2>Pryzen Lab</h2></a>
             </div>
 
             <div>
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <!-- Conteúdo Principal da Página -->
+        <!-- Página Principal -->
         <div class="content">
             <div id="introduction-div">
                 <div>
@@ -72,7 +72,7 @@
                     <div class="get-script-box">
                         <button class="toggle-btn">Acessar</button>
                         <a class="link-input hidden"
-                        href="javascript:fetch('https://raw.githubusercontent.com/paranatools/paranatools.github.io/refs/heads/main/v1.js').then(t=>t.text()).then(eval);"
+                        href="javascript:fetch('https://raw.githubusercontent.com/pryzen-lab/pryzen-lab.github.io/refs/heads/main/v1.js').then(t=>t.text()).then(eval);"
                         draggable="true">
                             Script Bookmarklet V1
                         </a>
@@ -88,7 +88,7 @@
                     <div class="get-script-box">
                         <button class="toggle-btn">Acessar</button>
                         <a class="link-input hidden"
-                        href="javascript:(async()=>{const url='https://raw.githubusercontent.com/paranatools/paranatools.github.io/refs/heads/main/v2.js';try{const r=await fetch(url);if(!r.ok)throw Error(r.status+' '+r.statusText);const js=await r.text();eval(js);}catch(e){alert('Erro ao carregar o script:\n'+e);} })();"
+                        href="javascript:(async()=>{const url='https://raw.githubusercontent.com/pryzen-lab/pryzen-lab.github.io/refs/heads/main/v2.js';try{const r=await fetch(url);if(!r.ok)throw Error(r.status+' '+r.statusText);const js=await r.text();eval(js);}catch(e){alert('Erro ao carregar o script:\n'+e);} })();"
                         draggable="true">
                             Script Bookmarklet V2
                         </a>
@@ -175,9 +175,9 @@
                 </div>
             </div>
 
-            <div id="parana-tools-div">
-                <img src="../imgs/icon.png" alt="Icone Paraná Tools">
-                <p>Paraná Tools</p>
+            <div id="pryzen-lab-div">
+                <img src="/imgs/icon.png" alt="Icone Pryzen Lab">
+                <p>Pryzen Lab</p>
             </div>
         </div>
 
