--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
     <!-- Estruturação do Site -->
     <body>
-        
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="imgs/icon.png" alt="Icone Paraná Tools">
-                <a href="#"><h2>Paraná Tools</h2></a>
+                <img src="../imgs/icon.png" alt="Icone Pryzen Lab">
+                <a href="../"><h2>Pryzen Lab</h2></a>
             </div>
 
             <div>
@@ -26,6 +25,7 @@
             </div>
         </div>
 
+        <!-- Página Principal -->
         <div class="content">
             <h1>Ferramentas Disponíveis</h1>
             <div id="tools-div">
