--- a/redacaorush/index.html
+++ b/redacaorush/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paraná Tools - Redação Rush</title>
+        <title>Pryzen Hub - Redação Rush</title>
         
         <!-- Estilização do Site -->
         <link rel="stylesheet" href="../css/general.css">
