--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Pryzen Hub</title>
 
         <!-- Estilização do Site -->
-        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="/css/general.css">
     </head>
 
     <!-- Estruturação do Site -->
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Pryzen Lab">
-                <a href="../"><h2>Pryzen Lab</h2></a>
+                <img src="/imgs/icon.png" alt="Icone Pryzen Lab">
+                <a href="/"><h2>Pryzen Lab</h2></a>
             </div>
 
             <div>
@@ -29,12 +29,12 @@
         <div class="content">
             <h1>Ferramentas Disponíveis</h1>
             <div id="tools-div">
-                <a href="redacaorush"><img src="imgs/redacaorush" alt="Redação Rush"></a>
+                <a href="redacaorush"><img src="imgs/redacaorush.png" alt="Redação Rush"></a>
             </div>
 
             <div class="footer">
                 <div>
-                    <h1>O que é o Paraná Tools?</h1>
+                    <h1>O que é o Pryzen Lab?</h1>
                 </div>
             </div>
         </div>
