--- a/login/index.html
+++ b/login/index.html
@@ -38,6 +38,7 @@
             </div>
         </div>
         
-        <script src="login.js"></script>
+        <script src="loginBtn.js"></script>
+        <script src="../scripts/checkLogin.js"></script>
     </body>
 </html>
