--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="/imgs/icon.png" alt="Icone Pryzen Lab">
-                <a href="/"><h2>Pryzen Lab</h2></a>
+                <img src="/imgs/icon.png" alt="Icone Pryzen Hub">
+                <a href="/"><h2>Pryzen Hub</h2></a>
             </div>
 
             <div>
@@ -34,7 +34,7 @@
 
             <div class="footer">
                 <div>
-                    <h1>O que é o Pryzen Lab?</h1>
+                    <h1>O que é o Pryzen Hub?</h1>
                 </div>
             </div>
         </div>
