--- a/redacaorush/index.html
+++ b/redacaorush/index.html
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Pryzen Lab">
-                <a href="../"><h2>Pryzen Lab</h2></a>
+                <img src="../imgs/icon.png" alt="Icone Pryzen Hub">
+                <a href="../"><h2>Pryzen Hub</h2></a>
             </div>
 
             <div>
@@ -175,9 +175,9 @@
                 </div>
             </div>
 
-            <div id="pryzen-lab-div">
-                <img src="/imgs/icon.png" alt="Icone Pryzen Lab">
-                <p>Pryzen Lab</p>
+            <div id="pryzen-hub-div">
+                <img src="/imgs/icon.png" alt="Icone Pryzen Hub">
+                <p>Pryzen Hub</p>
             </div>
         </div>
 
