Fixing Avatar in UserInfo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,26 @@
 
             <div class="footer">
                 <div>
-                    <h1>O que é o Pryzen Hub?</h1>
+                    <div>
+                        <h1>O que é o Pryzen Hub?</h1>
+                        <p>O **Pryzen **é um conjunto inteligente de scripts projetado para
+                            facilitar e otimizar o uso de diversas plataformas educacionais
+                            online. Ele atua como uma caixa de ferramentas digital, trazendo
+                            soluções personalizadas para alunos, professores e entusiastas
+                            da tecnologia educacional.
+    
+                            Com suporte para plataformas populares como *Khan Academy, Quizizz,
+                            Matific*, entre outras, o Pryzen oferece funcionalidades que vão
+                            desde melhorias na interface até automações que agilizam tarefas
+                            repetitivas, tornando a experiência de aprendizado mais fluida,
+                            rápida e intuitiva.
+                            
+                            Seja para revisar conteúdo, gerenciar tempo ou simplesmente
+                            explorar novas formas de estudar, o Pryzen é feito para quem
+                            quer tirar o máximo proveito do ambiente digital com praticidade 
+                            e estilo.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
