--- a/login/index.html
+++ b/login/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paraná Tools</title>
+        <title>Pryzen Hub</title>
         
         <!-- Estilização do Site -->
-        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="/css/general.css">
     </head>
 
     <!-- Estruturação do Site -->
@@ -15,8 +15,8 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Pryzen Hub">
-                <a href="../"><h2>Pryzen Hub</h2></a>
+                <img src="/imgs/icon.png" alt="Icone Pryzen Hub">
+                <a href="/"><h2>Pryzen Hub</h2></a>
             </div>
         </div>
 
@@ -32,13 +32,13 @@
                 </p>
 
                 <button id="login-discord">
-                    <img src="../imgs/discord-icon.svg" alt="">
+                    <img src="/imgs/discord-icon.svg" alt="">
                     Conectar ao Discord
                 </button>
             </div>
         </div>
         
         <script src="loginBtn.js"></script>
-        <script src="../scripts/checkLogin.js"></script>
+        <script src="/js/checkLogin.js"></script>
     </body>
 </html>
