--- a/redacaorush/index.html
+++ b/redacaorush/index.html
@@ -15,14 +15,14 @@
         <!-- Barra de Navegação -->
         <div class="nav-bar">
             <div>
-                <img src="../imgs/icon.png" alt="Icone Pryzen Hub">
-                <a href="../"><h2>Pryzen Hub</h2></a>
+                <img src="/imgs/icon.png" alt="Icone Pryzen Hub">
+                <a href="/"><h2>Pryzen Hub</h2></a>
             </div>
 
             <div>
                 <a href="#script-v1">Redação Rush V1</a>
                 <a href="#script-v2">Redação Rush V2</a>
-                <a id="login-btn" href="../login" style="display: none;">Login</a>
+                <a id="login-btn" href="/login" style="display: none;">Login</a>
                 <div id="user-info" style="display: none;"></div>
             </div>
         </div>
@@ -182,7 +182,7 @@
         </div>
 
         <!-- Java Script -->
-        <script src="../scripts/checkLogin.js"></script>
+        <script src="/js/checkLogin.js"></script>
         <script src="scripts/open_script.js"></script>
         <script src="scripts/anim_script.js"></script>
     </body>
