--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    @import url(/css/general.css);;
+    @import url(/css/style.css);
   </style>
 </head>
 
 <body class="min-h-screen hero-pattern text-gray-100">
 
   <!-- Header modificado -->
-  <header class="nav-bar w-full py-4 px-6 flex justify-between items-center bg-gradient-to-r from-purple-900 to-purple-700 shadow-lg fixed top-0 z-50">
+  <header class="nav-bar w-full py-4 px-6 flex justify-between items-center bg-black shadow-lg fixed top-0 z-50">
     <div class="flex items-center gap-3">
       <img src="/imgs/icon.png" alt="Pryzen Hub Logo" class="w-20 object-cover">
       <h1 class="text-2xl font-bold text-white flex items-center jump-text">
@@ -27,8 +27,7 @@
         <span class="text-white ml-2 mobile-hidden">Hub</span>
       </h1>
     </div>
-    <button onclick="window.location.href = '/login';" 
-            class="custom-button bg-white/10 text-white px-6 py-2 rounded-full hover:bg-white/20 transition backdrop-blur-sm border border-white/20 flex items-center gap-2">
+    <button id="login-btn" onclick="window.location.href = '/login';">
       <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"/>
       </svg>
@@ -165,6 +164,7 @@
       </form>
     </div>
   </section>
+</main>
 
   <footer class="bg-gray-900/80 backdrop-blur-sm py-12 px-4 mt-32">
     <div class="container mx-auto max-w-6xl">
@@ -244,7 +244,6 @@
     </div>
   </footer>
       
-  </main>
 
   <!-- Java Script -->
   <script src="/js/checkLogin.js"></script>
